# MetroSimulatie

./: .gitignore  CMakeLists.txt  DesignByContract.h  Makefile  README.md  main.cpp  todo.txt
Engine/: CMakeLists.txt  Face.cpp  Face.h  Figure.cpp  Figure.h  Light.cpp  Light.h  Line2D.h  Point2D.h  README.md  Texture.cpp  Texture.h  ZBuffer.cpp  ZBuffer.h  easy_image.cc  easy_image.h  engine.cc  engine.h  l_parser.cc  l_parser.h  obj_parser.cc  todo.txt  utils.cpp  utils.h
Engine/main/: main.cpp
GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
components/ConfigManager/: ConfigManager.h
components/MetroObject/: IMetroObject.h  IMetroObjectValidator.h  VMetroObjectImporter.cpp  VMetroObjectImporter.h
components/MetroObject/Exceptions/: IMetroObjectException.h  VHandleableMetroObjectException.h  VUnhandleableMetroObjectException.h
components/Metronet/: Metronet.cpp  Metronet.h  MetronetExporter.cpp  MetronetExporter.h  MetronetImporter.cpp  MetronetImporter.h  MetronetValidator.cpp  MetronetValidator.h
components/Metronet/Exceptions/: MetronetInconsistentException.h
components/Station/: Halte.cpp  Halte.h  Metrostation.cpp  Metrostation.h  Station.cpp  Station.h  StationImporter.cpp  StationImporter.h  StationValidator.cpp  StationValidator.h  config_station.xml
components/Tram/: Albatros.cpp  Albatros.h  PCC.cpp  PCC.h  Stadslijner.cpp  Stadslijner.h  StandardTram.cpp  StandardTram.h  Tram.cpp  Tram.h  TramImporter.cpp  TramImporter.h  TramValidator.cpp  TramValidator.h  config_tram.xml
components/Tram/TramType/: TramType.cpp  TramType.h  TramTypeImporter.cpp  TramTypeImporter.h  config_tramType.xml  tramTypes.xml
components/Utils/: IMetroObjectValidator.h  VMetroObjectImporter.cpp  VMetroObjectImporter.h
components/metronet/: Metronet.cpp  Metronet.h  MetronetExporter.cpp  MetronetExporter.h  MetronetImporter.cpp  MetronetImporter.h  MetronetValidator.cpp  MetronetValidator.h  config.xml
components/parser/: Parser.cpp  Parser.h
components/station/: Station.cpp  Station.h  StationImporter.cpp  StationImporter.h  stationTypes.xml
components/tram/: Tram.cpp  Tram.h  TramImporter.cpp  TramImporter.h  config_tram.xml  supportedTramTypes.xml
components/utils/: IMetroObject.h  VMetroObjectImporter.h  VTagImporter.cpp  VTagImporter.h
docs/: MetroSimulatie.config
gtest/ci/: linux-presubmit.sh  macos-presubmit.sh
gtest/docs/_data/: navigation.yml
gtest/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
gtest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link2_test.cc  gmock_link_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc  gmock_test_utils.py
gtest/googletest/samples/: prime_tables.h  sample1.cc  sample1.h  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
gtest/googletest/src/: gtest-all.cc  gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
gtest/googletest/test/: googletest-break-on-failure-unittest.py  googletest-break-on-failure-unittest_.cc  googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-color-test.py  googletest-color-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test.py  googletest-env-var-test_.cc  googletest-failfast-unittest.py  googletest-failfast-unittest_.cc  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-global-environment-unittest.py  googletest-global-environment-unittest_.cc  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  (+61 more)
input/: input.xml  multiple_tracks.xml  simple_input.xml
my_metrosimulations/: start.html
output/: output.txt  output_advanced.txt  start.html
output/GeneratedImages/: 0.ini  3.ini  filelist
tests/: README.md  Tests.cpp  tests_main.cpp
tools/: DesignByContract.h  Expect.cpp  Expect.h  IfFalse.cpp  IfFalse.h  utils.h
tools/tinyxml/: tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
(+64 files in other folders)
